[tool.poetry]
name = "wrasc"
version = "0.1.0"
description = "Supervisory Control based on Watch-React agents"
authors = ["Nader Afshar <naderafsh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
pyyaml = "^5.3.1"
pylogging = "^1.0.2"
pyepics = "^3.4.2"
flask_table = "^0.5.0"
regex = "^2020.7.14"
paramiko = "^2.7.1"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pycodestyle = "^2.6.0"
pylint = "^2.5.3"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
